...
  'bhatbhateni': 'Shopping',
  'daraz': 'Shopping',
  'sastodeal': 'Shopping',
  'thamel': 'Shopping',
  'mall': 'Shopping',
  'mart': 'Shopping',
  'foodmandu': 'Food',
  'restaurant': 'Food',
  'cafe': 'Food',
  'bakery': 'Food',
  'petrol': 'Fuel',
  'fuel': 'Fuel',
  'hospital': 'Health',
...
